--- a/shop/package.json
+++ b/shop/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "text": "^0.1.0",
+    "truncate": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
